--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Alkatra', cursive;
 }
 :root {
 
@@ -20,7 +21,7 @@
 
     --dk-text: hsl(198, 20%, 13%);
 }
-.wrapper{
+body{
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -30,31 +31,56 @@
     background-color: rgba(71, 17, 125, 0.775);
     background: linear-gradient(25deg, rgba(174, 6, 241, 0.999), rgb(37, 2, 69));
 }
+.wrapper{
+    width: 90%;
+    max-width: 450px;
+}
 .heading{
-    font-size: 50px;
+    /* font-size: 40px; */
     color: #fff;
     margin-bottom: 20px;
+    font-weight: bolder;
+    opacity: 0.75;
+    text-transform: uppercase;
+    line-height: 1.2;
+    text-align: center;
 }
 .display-container{
-    width: 450px;
-    padding: 20px;
-    height: 40px;
+    position: relative;
+    padding: 0.35rem;
+    margin: 1rem 0;
     background-color: rgb(35, 4, 55);
-    display: flex;
-    justify-content: space-between;
-    border-radius: 10px;
-    border-bottom: 7px solid rgb(122, 5, 231);
+    border-radius: 1rem;
+    border-bottom: 0.35rem solid rgb(122, 5, 231);
 }
 .display{
-    color: rgb(248, 248, 1);
-    background-color: rgb(35, 4, 55);
+    width: 100%;
+    padding: 1.15rem 1rem;
+    color: var(--vb-yellow);
+    background: transparent;
     border: none;
-    font-size: 25px;
-    font-weight: bold;
-    letter-spacing: 1.5px;
+    line-height: 30px;
+    font-size: 1.5rem;
+    font-weight: 600;
+    letter-spacing: 1px;
+    padding-right: 3.25rem;
+    
+}
+.display::placeholder{
+    opacity: 0.65;
+    position: absolute;
+    top: 50%;
+    line-height: 30px;
+    font-size: 1.5rem;
+    color: var(--vb-yellow);
+    text-transform: uppercase;
+    transform: translateY(-50%);
 }
 #copy-btn{
-    position: relative;
+    position: absolute;
+    top: 50%;
+    right: 1.5rem;
+    transform: translateY(-50%);
     background-color: rgb(35, 4, 55);
     border: none;
     cursor: pointer;
@@ -64,47 +90,49 @@
     color: aqua;
 }
 #copy-msg{
-    scale: 0;
+    transform :scale(0);
     position: absolute;
-    background-color: rgb(168, 43, 226);
-    top: -40px;
+    background-color: var(--vb-violet2);
+    top: -35px;
     left: -10px;
     font-size: 12px;
-    color: yellow;
-    padding: 10px;
-    border-radius: 19px;
-    transition: all 0.2s linear;
+    opacity: 0;
+    color: var(--vb-yellow);
+    padding: 5px 10px;
+    border-radius: 1rem;
+    transform-origin: bottom;
+    transition: transform 250ms ease-in-out;
 
 }
-.active{
-    scale: 1;
+#copy-msg.active{
+    opacity: 1;
+    transform : scale(1);
 }
 
 .input-container{
-    margin-top: 40px;
+    /* width: 100%; */
     background-color: rgb(35, 4, 55);
-    width: 450px;
-    padding: 20px;
-    border-bottom: 7px solid rgb(122, 5, 231);
-    border-radius: 10px;
+    padding: 2rem;
+    border-bottom: 0.35rem solid rgb(122, 5, 231);
+    border-radius: 1rem;
 }
 .length-container{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* margin-bottom: 20px; */
 }
 .length-container h2{
     color: #fff;
+    font-size: 1.5rem;
 }
 .length-container p{
-    color: rgb(248, 248, 1);
-    font-size: 22px;
-    font-weight: bold;
+    color: var(--vb-yellow);
+    font-size: 1.5rem;
 }
 #slider{
     appearance: none;
     width: 100%;
+    height: 0.75rem;
     margin-top: 2rem;
     margin-bottom: 1.5rem;
     border: none;
@@ -116,46 +144,101 @@
     background-image: linear-gradient(var(--vb-violet), var(--vb-violet));
     background-repeat: no-repeat;
 }
+#slider::-webkit-slider-thumb{
+    position: relative;
+    appearance: none;
+    height: 2rem;
+    width: 2rem;
+    border-radius: 50%;
+    background-color: var(--vb-yellow);
+    cursor: pointer;
+    margin-top: -3px;
+    box-shadow: 0px 0px 20px 0px rgba(255, 229, 62, 0.50);
+    transition: all 100ms ease-in;
+}
 #slider:focus {
-    outline: none;
     outline: 3px solid var(--vb-yellow);
 }
-.checkbox-container{
+#slider::-webkit-slider-thumb:hover{
+    background-color: var(--dk-violet);
+    outline: 2px solid var(--vb-yellow);
+    box-shadow: 0px 0px 25px 3px rgba(255, 229, 62, 0.50);
+}
+
+/* only firefox browser */
+#slider::-moz-range-thumb{
+    position: relative;
+    appearance: none;
+    height: 2rem;
+    width: 2rem;
+    border-radius: 50%;
+    background-color: var(--vb-yellow);
+    cursor: pointer;
+    margin-top: -3px;
+    box-shadow: 0px 0px 20px 0px rgba(255, 229, 62, 0.50);
+    transition: all 100ms ease-in;
+}
+#slider::-moz-range-thumb:hover{
+    background-color: var(--dk-violet);
+    outline: 2px solid var(--vb-yellow);
+    box-shadow: 0px 0px 25px 3px rgba(255, 229, 62, 0.50);
+}
+.check{
     display: flex;
-    gap: 15px;
-    flex-direction: column;
+    align-items: center;
+    margin: 1rem 0;
+    gap: 0 1rem;
     color: #fff;
 }
-.checkbox label{
-    font-size: 22px;
-    text-transform: capitalize;
-    margin-left: 1rem;
+.check input{
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    border: 1px solid var(--vb-cyan);
+    position: relative;
+    border-radius: 0.35rem;
+}
+.check input:checked{
+    background-color: var(--vb-cyan);
+}
+.check input:checked::after{
+    content: "✔";
+    position: absolute;
+    color: var(--dk-text);
+    font-size: 1.05rem;
+    font-weight: 600;
+    top: -15%;
+    left: 15%;
 }
 .strength-container{
     display: flex;
     justify-content: space-between;
-    margin: 1rem 0 1rem 0;
+    margin-top: 1.75rem;
+    margin-bottom: 2rem;
 }
 .strength-container p{
+    color: #fff;
     font-size: 22px;
     text-transform: capitalize;
     /* font-weight: bold; */
 }
 .strength-container div{
-    width: 22px;
-    height: 22px;
+    width: 1.5rem;
+    height: 1.5rem;
     background-color: gray;
     border-radius: 100%;
-    box-shadow: 0px 0px 15px gray;
+    box-shadow: 0px 0px 12px gray;
 }
 .generate-btn{
-    font-size: 22px;
+    width: 100%;
+    font-size: 1.25rem;
     text-align: center;
     font-weight: bold;
     color: var(--vb-yellow);
-    margin: 0 0.5em 1rem 0.5em;
-    padding: 13px;
-    border-radius: 10px;
+    padding: 1rem 0;
+    letter-spacing: 1px;
+    border-radius: 0.75rem;
     background-color: var(--vb-violet);
-    border-bottom: 7px solid var(--vb-yellow);
+    border-bottom: 0.35rem solid var(--vb-yellow);
 }
